| Summary: | ASTERISK-19103: When using realtime queues, function QUEUE_MEMBER_LIST() will return an error if no other app/function has loaded the queues first. This problem does not exist if queues.conf is used. | ||
| Reporter: | Jim Van Meggelen (jimvanm) | Labels: | |
| Date Opened: | 2011-12-23 13:03:06.000-0600 | Date Closed: | 2017-08-25 09:09:56 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 1.8.8.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I noticed that if I run the function QUEUE_MEMBER_LIST right after Asterisk starts, I get the following error: [2011-12-22 17:10:32] WARNING[9448]: app_queue.c:6355 queue_function_queuememberlist: queue 98 was not found If I then execute the following from the CLI: queue show 98 and then place a call again, there is no error. I would expect that the QUEUE_MEMBER_LIST should be reading the database to check for any valid queues before returing 'not found' I found a workaround: If I run the QUEUE_EXISTS function on the queue first, the dialplan is then able to run the QUEUE_MEMBER_LIST function successfully. I would still argue that this is buggy behaviour. In lieu of fixing the bug, it might be enough to add the following text to the documentation of this function: "If you are using realtime to store queues, run the QUEUE_EXISTS() function before this one, to ensure all the queues are loaded into memory. Otherwise, this function may fail to return a result." | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-08-25 09:09:57.544-0500 Change 6293 merged by Jenkins2: app_queue: Evaluate realtime queues when running dialplan functions [https://gerrit.asterisk.org/6293|https://gerrit.asterisk.org/6293] By: Friendly Automation (friendly-automation) 2017-08-25 09:25:43.516-0500 Change 6295 merged by Jenkins2: app_queue: Evaluate realtime queues when running dialplan functions [https://gerrit.asterisk.org/6295|https://gerrit.asterisk.org/6295] By: Friendly Automation (friendly-automation) 2017-08-25 09:34:31.435-0500 Change 6296 merged by Jenkins2: app_queue: Evaluate realtime queues when running dialplan functions [https://gerrit.asterisk.org/6296|https://gerrit.asterisk.org/6296] By: Friendly Automation (friendly-automation) 2017-08-25 11:42:18.008-0500 Change 6294 merged by Joshua Colp: app_queue: Evaluate realtime queues when running dialplan functions [https://gerrit.asterisk.org/6294|https://gerrit.asterisk.org/6294] | ||